👨‍💻Made Joey development-ready Added dark mode functionality Fixed bug that would give focus to caption-div Changed finishEditing() to the updated function in CC

--- a/Source/joehills/style.css
+++ b/Source/joehills/style.css
@@ -61,3 +61,6 @@
 .caption {
   resize: vertical;
 }
+#caption-container, #captionCanvas, #preview-area {
+  z-index: 2
+}
